--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,18 @@ body {
 .navbar a:hover {
     background-color: #575757;
 }
+
+.vb-banner {
+    background-color: #061124ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px; /* Adjust the height as needed */
+  }
+  
+  .vb-banner img {
+    max-width: 100%; /* Ensures the image is responsive */
+    height: auto;
+  }
+
+}
